fix off-centered content🔧

--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,12 @@ body {
     max-width: 100%;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .logo {
     object-fit: contain;
     max-width: 30em;
